--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <html>
+    <head>
+        <title>Portfolio Eloi Casamayor</title>
+    </head>
     <body>
+        <h1>Eloi Casamayor\nWeb developer.</h1>
+
         MyPortfolio
+        <section>
+            <h2>About me</h2>
+        </section>
+        <section>
+            <h2>Portfolio</h2>
+        </section>
+        <section>
+            <h2>Contact me</h2>
+        </section>
+        <footer>Aquest és el footer</footer>
     </body>
 </html>
