--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <body>
         <h1>Eloi Casamayor<br>Web developer.</h1>
 
-        <p title="Tooltip TCM">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In augue lorem, blandit sit amet est in, rutrum faucibus diam. Curabitur aliquet velit sit amet enim lacinia dignissim. Aenean pellentesque, sapien et aliquam mattis, neque ex venenatis mauris, quis porttitor turpis purus id sapien. Quisque a lacus rutrum enim condimentum auctor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque laoreet hendrerit neque, nec ultrices nisl congue vitae. Integer tempus orci sit amet neque iaculis, fermentum dignissim nisi suscipit.</p>
+        <p title="Tooltip TCM">Lorem <b>b</b> <strong>tring</strong> <i>italic</i> <em>em</em> <mark>mark</mark> <small>small</small> <del>del</del> <ins>ins</ins> <sub>sub</sub> <sup>sup</sup> consectetur adipiscing elit. In augue lorem, blandit sit amet est in, rutrum faucibus diam. Curabitur aliquet velit sit amet enim lacinia dignissim. Aenean pellentesque, sapien et aliquam mattis, neque ex venenatis mauris, quis porttitor turpis purus id sapien. Quisque a lacus rutrum enim condimentum auctor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque laoreet hendrerit neque, nec ultrices nisl congue vitae. Integer tempus orci sit amet neque iaculis, fermentum dignissim nisi suscipit.</p>
+        <pre>
+            El prblema
+            .
+            ..
+            ...
+            ..
+            .
+            Del poema.
+        </pre>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Matar%C3%B3_-_TecnoCampus_Matar%C3%B3-Maresme%2C_Edifici_Universitari_TCM1_%2803%29.jpg/1024px-Matar%C3%B3_-_TecnoCampus_Matar%C3%B3-Maresme%2C_Edifici_Universitari_TCM1_%2803%29.jpg" width="250" height="400">
         <p><a href="http://www.tecnocampus.cat">web del tecnocampus</a></p>
         <img src="https://www.tecnocampus.cat/themes/tecnocampus/templates/assets/skin/images/logotips-tecnocampus/tecnocampus/x01-logo-cat-negre-tcm-sol.jpg.pagespeed.ic.mYkuzm4OUE.webp" alt="LOCO TCM">
