--- a/index.html
+++ b/index.html
@@ -1,32 +1,124 @@
 <html>
-    <head>
-        <title>Portfolio Eloi Casamayor</title>
-    </head>
-    <body>
-        <h1>Eloi Casamayor<br>Web developer.</h1>
+  <head>
+    <title>Portfolio Eloi Casamayor</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#about_me">About me</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
 
-        <p title="Tooltip TCM">Lorem <b>b</b> <strong>tring</strong> <i>italic</i> <em>em</em> <mark>mark</mark> <small>small</small> <del>del</del> <ins>ins</ins> <sub>sub</sub> <sup>sup</sup> consectetur adipiscing elit. In augue lorem, blandit sit amet est in, rutrum faucibus diam. Curabitur aliquet velit sit amet enim lacinia dignissim. Aenean pellentesque, sapien et aliquam mattis, neque ex venenatis mauris, quis porttitor turpis purus id sapien. Quisque a lacus rutrum enim condimentum auctor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque laoreet hendrerit neque, nec ultrices nisl congue vitae. Integer tempus orci sit amet neque iaculis, fermentum dignissim nisi suscipit.</p>
-        <pre>
-            El prblema
-            .
-            ..
-            ...
-            ..
-            .
-            Del poema.
-        </pre>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Matar%C3%B3_-_TecnoCampus_Matar%C3%B3-Maresme%2C_Edifici_Universitari_TCM1_%2803%29.jpg/1024px-Matar%C3%B3_-_TecnoCampus_Matar%C3%B3-Maresme%2C_Edifici_Universitari_TCM1_%2803%29.jpg" width="250" height="400">
-        <p><a href="http://www.tecnocampus.cat">web del tecnocampus</a></p>
-        <img src="https://www.tecnocampus.cat/themes/tecnocampus/templates/assets/skin/images/logotips-tecnocampus/tecnocampus/x01-logo-cat-negre-tcm-sol.jpg.pagespeed.ic.mYkuzm4OUE.webp" alt="LOCO TCM">
-        <section>
-            <h2>About me</h2>
-        </section>
-        <section>
-            <h2>Portfolio</h2>
-        </section>
-        <section>
-            <h2>Contact me</h2>
-        </section>
-        <footer>Aquest és el footer</footer>
-    </body>
+    <section id="home">
+      <h1>Eloi Casamayor<br /><mark>Web developer.</mark></h1>
+      <a class="link-center-home" href="#contact">Contact me</a>
+    </section>
+
+    <section id="about_me">
+      <h2><mark>About me.</mark></h2>
+      <div class="about-div">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+          vehicula convallis urna ac semper. Sed nisl nulla, bibendum a tellus
+          in, condimentum volutpat felis. Proin vel finibus nisi. Vivamus
+          vestibulum blandit urna quis tempus. Integer aliquam eu ante non
+          semper. Vivamus justo mi, rhoncus quis nibh ac, malesuada pulvinar
+          massa. Etiam ornare facilisis ex, at placerat erat. nulla, bibendum a
+          tellus in, condimentum volutpat felis. Proin vel finibus nisi.
+        </p>
+        <img
+          class="img-about_me"
+          src="https://pbs.twimg.com/profile_images/1410601337499262983/l8vB3uzO_400x400.jpg"
+          alt="Eloi Casamayor"
+        />
+      </div>
+    </section>
+
+    <section id="portfolio">
+      <h2><mark>Portfolio</mark></h2>
+      <ul>
+        <li>
+          <h3>Project 1</h3>
+          <h4>Descripcio del projecte 1</h4>
+          <p>
+            Text d'explicació del projecte 1 amb totes les caracteristiques i
+            etc etc.
+          </p>
+          <img
+            src="https://git.az/source/services/2/photo/original/web.jpg"
+            alt="imatge de projecte 1"
+            width="250px"
+          />
+        </li>
+        <li>
+          <h3>Project 2</h3>
+          <h4>Descripcio del projecte 2</h4>
+          <p>
+            Text d'explicació del projecte 2 amb totes les caracteristiques i
+            etc etc.
+          </p>
+          <img
+            src="https://git.az/source/services/2/photo/original/web.jpg"
+            alt="imatge de projecte 1"
+            width="250px"
+          />
+        </li>
+        <li>
+          <h3>Project 3</h3>
+          <h4>Descripcio del projecte 3</h4>
+          <p>
+            Text d'explicació del projecte 3 amb totes les caracteristiques i
+            etc etc.
+          </p>
+          <img
+            src="https://git.az/source/services/2/photo/original/web.jpg"
+            alt="imatge de projecte 1"
+            width="250px"
+          />
+        </li>
+      </ul>
+      <div>
+        <div class="boleta-nav" id="boleta1"></div>
+        <div class="boleta-nav" id="boleta2"></div>
+        <div class="boleta-nav" id="boleta3"></div>
+      </div>
+    </section>
+    <section id="contact">
+      <h2><mark>Contact me</mark></h2>
+      <h3>Send me a message</h3>
+      <form>
+        <input type="text" name="name" placeholder="Your name" />
+        <input type="email" name="email" placeholder="Your email" />
+        <textarea
+          name="message"
+          rows="4"
+          cols="50"
+          placeholder="Your message"
+          resiz
+        ></textarea>
+        <button class="form-button">Send</button>
+      </form>
+      <h3>My social media</h3>
+      <ul class="social-media-list">
+        <a href="http://www.linkedin.com/in/eloicasamayor"
+          ><li class="social">Linkedin</li></a
+        >
+        <a href="mailto:eloi.casamayor@gmail.com"
+          ><li class="social">Email</li></a
+        >
+        <a href="http://www.twitter.com/eloicasamayor"
+          ><li class="social">twitter</li></a
+        >
+        <a href="http://www.github.com/eloicasamayor"
+          ><li class="social">Github></li></a
+        >
+      </ul>
+    </section>
+
+    <footer>Aquest és el footer ©copyright Eloi Casamayor 2022</footer>
+  </body>
 </html>
