--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Portfolio Eloi Casamayor</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
+    <header class="sticky">
       <nav>
         <a href="#">Home</a>
         <a href="#about_me">About me</a>
@@ -21,7 +22,7 @@
     <section id="about_me">
       <h2><mark>About me.</mark></h2>
       <div class="about-div">
-        <p>
+        <p class="about-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
           vehicula convallis urna ac semper. Sed nisl nulla, bibendum a tellus
           in, condimentum volutpat felis. Proin vel finibus nisi. Vivamus
@@ -114,7 +115,7 @@
           ><li class="social">twitter</li></a
         >
         <a href="http://www.github.com/eloicasamayor"
-          ><li class="social">Github></li></a
+          ><li class="social">Github</li></a
         >
       </ul>
     </section>
