--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <header class="sticky">
+      <div class="menu-mobile"></div>
       <nav>
         <a href="#">Home</a>
         <a href="#about_me">About me</a>
