--- a/index.html
+++ b/index.html
@@ -2,19 +2,12 @@
 <html>
   <head>
     <title>Portfolio Eloi Casamayor</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <header class="sticky">
-      <div class="menu-mobile"></div>
-      <nav>
+      <div class="menu-mobile"><a href="#">menu mobil</a></div>
+      <nav class="menu-principal">
         <a href="#">Home</a>
         <a href="#about_me">About me</a>
         <a href="#portfolio">Portfolio</a>
@@ -24,20 +17,12 @@
 
     <section id="home">
       <h1>Eloi Casamayor<br /><mark>Web developer.</mark></h1>
-      <p class="frase-home">
-        Una frase xula que digui que sóc un bon desenvolupador i nanana!
-      </p>
       <a class="link-center-home" href="#contact">Contact me</a>
     </section>
 
     <section id="about_me">
       <h2><mark>About me.</mark></h2>
       <div class="about-div">
-        <img
-          class="img-about_me"
-          src="https://pbs.twimg.com/profile_images/1410601337499262983/l8vB3uzO_400x400.jpg"
-          alt="Eloi Casamayor"
-        />
         <p class="about-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
           vehicula convallis urna ac semper. Sed nisl nulla, bibendum a tellus
@@ -47,6 +32,11 @@
           massa. Etiam ornare facilisis ex, at placerat erat. nulla, bibendum a
           tellus in, condimentum volutpat felis. Proin vel finibus nisi.
         </p>
+        <img
+          class="img-about_me"
+          src="https://pbs.twimg.com/profile_images/1410601337499262983/l8vB3uzO_400x400.jpg"
+          alt="Eloi Casamayor"
+        />
       </div>
     </section>
 
@@ -131,6 +121,6 @@
       </ul>
     </section>
 
-    <footer>Eloi Casamayor 2022 | All rights reserved</footer>
+    <footer>Aquest és el footer ©copyright Eloi Casamayor 2022</footer>
   </body>
 </html>
