--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h2><mark>Portfolio</mark></h2>
       <ul>
         <li>
-          <h3>Project 1</h3>
+          <h3><mark>Projecte 1</mark></h3>
           <h4>Descripcio del projecte 1</h4>
           <p>
             Text d'explicació del projecte 1 amb totes les caracteristiques i
@@ -57,7 +57,7 @@
           />
         </li>
         <li>
-          <h3>Project 2</h3>
+          <h3><mark>Projecte 2</mark></h3>
           <h4>Descripcio del projecte 2</h4>
           <p>
             Text d'explicació del projecte 2 amb totes les caracteristiques i
@@ -70,7 +70,7 @@
           />
         </li>
         <li>
-          <h3>Project 3</h3>
+          <h3><mark>Projecte 3</mark></h3>
           <h4>Descripcio del projecte 3</h4>
           <p>
             Text d'explicació del projecte 3 amb totes les caracteristiques i
