--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <a
+      class="menu-mobile"
+      id="toggle-menu-mobile"
+      href="#"
+      onclick="toggleMenuMobil()"
+      >menu mobil</a
+    >
     <header class="sticky">
       <div class="menu-mobile">
-        <a id="toggle-menu-mobile" href="#" onclick="toggleMenuMobil()"
-          >menu mobil</a
-        >
         <nav id="menu-gran">
           <a href="#">Home</a>
           <a href="#about_me">About me</a>
@@ -37,7 +41,12 @@
     <section id="about_me">
       <h2><mark>About me</mark></h2>
       <div class="about-div">
-        <p class="about-text">
+        <img
+          class="img-about_me"
+          src="https://pbs.twimg.com/profile_images/1410601337499262983/l8vB3uzO_400x400.jpg"
+          alt="Eloi Casamayor"
+        />
+        <p class="about-text tarjeta sombra">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
           vehicula convallis urna ac semper. Sed nisl nulla, bibendum a tellus
           in, condimentum volutpat felis. Proin vel finibus nisi. Vivamus
@@ -46,18 +55,13 @@
           massa. Etiam ornare facilisis ex, at placerat erat. nulla, bibendum a
           tellus in, condimentum volutpat felis. Proin vel finibus nisi.
         </p>
-        <img
-          class="img-about_me"
-          src="https://pbs.twimg.com/profile_images/1410601337499262983/l8vB3uzO_400x400.jpg"
-          alt="Eloi Casamayor"
-        />
       </div>
     </section>
 
     <section id="portfolio">
       <h2><mark>Portfolio</mark></h2>
       <ul>
-        <li>
+        <li class="tarjeta sombra">
           <h3><mark>Projecte 1</mark></h3>
           <h4>Descripcio del projecte 1</h4>
           <p>
@@ -70,7 +74,7 @@
             width="250px"
           />
         </li>
-        <li>
+        <li class="tarjeta sombra">
           <h3><mark>Projecte 2</mark></h3>
           <h4>Descripcio del projecte 2</h4>
           <p>
@@ -83,7 +87,7 @@
             width="250px"
           />
         </li>
-        <li>
+        <li class="tarjeta sombra">
           <h3><mark>Projecte 3</mark></h3>
           <h4>Descripcio del projecte 3</h4>
           <p>
@@ -96,7 +100,7 @@
             width="250px"
           />
         </li>
-        <li>
+        <li class="tarjeta sombra">
           <h3><mark>Projecte 4</mark></h3>
           <h4>Descripcio del projecte 4</h4>
           <p>
@@ -126,6 +130,7 @@
             method="POST"
             accept-charset="UTF-8"
             target="_blank"
+            class="sombra"
           >
             <input type="text" name="name" placeholder="Your name" />
             <input type="email" name="email" placeholder="Your email" />
@@ -143,16 +148,16 @@
           <h3>My social media</h3>
           <ul class="social-media-list">
             <a href="http://www.linkedin.com/in/eloicasamayor"
-              ><li class="social">Linkedin</li></a
+              ><li class="social sombra">Linkedin</li></a
             >
             <a href="mailto:eloi.casamayor@gmail.com"
-              ><li class="social">Email</li></a
+              ><li class="social sombra">Email</li></a
             >
             <a href="http://www.twitter.com/eloicasamayor"
-              ><li class="social">twitter</li></a
+              ><li class="social sombra">twitter</li></a
             >
             <a href="http://www.github.com/eloicasamayor"
-              ><li class="social">Github</li></a
+              ><li class="social sombra">Github</li></a
             >
           </ul>
         </div>
