--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           src="https://pbs.twimg.com/profile_images/1410601337499262983/l8vB3uzO_400x400.jpg"
           alt="Eloi Casamayor"
         />
-        <p class="about-text tarjeta sombra">
+        <p class="tarjeta sombra">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
           vehicula convallis urna ac semper. Sed nisl nulla, bibendum a tellus
           in, condimentum volutpat felis. Proin vel finibus nisi. Vivamus
