--- a/index.html
+++ b/index.html
@@ -5,11 +5,28 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    <script
+      src="https://kit.fontawesome.com/b445c1d47d.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Portfolio Eloi Casamayor</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <svg
+      class="svg-dalt"
+      viewBox="0 0 1440 811"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M1442 0H0V810C67.8333 630.601 230.915 298.436 319 273.608C492.5 224.704 482.5 362.606 699.5 356.592C916.5 350.579 965.901 6.49329 1100 118.571C1285.5 273.608 1412.5 29.2939 1442 0Z"
+        fill="#24A586"
+        stroke="#24A586"
+      />
+    </svg>
     <header class="sticky">
+      <span id="toggle-menu-mobile">☰</span>
       <div id="menu" class="menu-hidden">
         <nav>
           <a href="#home">Home</a>
@@ -18,145 +35,249 @@
           <a href="#contact">Contact</a>
         </nav>
       </div>
-      <a id="toggle-menu-mobile" href="#" onclick="toggleMenuMobil()">☰</a>
     </header>
 
     <section id="home">
       <h1>Eloi Casamayor<br /><mark>Web developer</mark></h1>
       <a class="link-center-home" href="#contact">Contact me</a>
+      <svg
+        class="svg-baix"
+        viewBox="0 0 1440 521"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M1439 520H-3V1.5C64.8333 90.3134 117.5 410.48 273 432.179C428.5 453.878 479.5 340.488 696.5 343.465C913.5 346.442 1041 436.942 1221 432.179C1365 428.368 1426.33 345.846 1439 305.062V520Z"
+          fill="#24A586"
+          stroke="#24A586"
+        />
+      </svg>
     </section>
 
     <section id="about_me">
-      <h2><mark>About me</mark></h2>
-      <div class="about-div">
-        <img
-          class="img-about_me"
-          src="https://pbs.twimg.com/profile_images/1410601337499262983/l8vB3uzO_400x400.jpg"
-          alt="Eloi Casamayor"
+      <svg
+        class="svg-dalt"
+        viewBox="0 0 1440 811"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M1442 0H0V810C67.8333 630.601 230.915 298.436 319 273.608C492.5 224.704 482.5 362.606 699.5 356.592C916.5 350.579 965.901 6.49329 1100 118.571C1285.5 273.608 1412.5 29.2939 1442 0Z"
+          fill="#24A586"
+          stroke="#24A586"
         />
-        <p class="tarjeta sombra">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
-          vehicula convallis urna ac semper. Sed nisl nulla, bibendum a tellus
-          in, condimentum volutpat felis. Proin vel finibus nisi. Vivamus
-          vestibulum blandit urna quis tempus. Integer aliquam eu ante non
-          semper. Vivamus justo mi, rhoncus quis nibh ac, malesuada pulvinar
-          massa. Etiam ornare facilisis ex, at placerat erat. nulla, bibendum a
-          tellus in, condimentum volutpat felis. Proin vel finibus nisi.
-        </p>
+      </svg>
+      <div class="section-wrapper">
+        <h2><mark>About me</mark></h2>
+        <div class="about-div">
+          <img
+            class="img-about_me"
+            src="https://pbs.twimg.com/profile_images/1410601337499262983/l8vB3uzO_400x400.jpg"
+            alt="Eloi Casamayor"
+          />
+          <p class="tarjeta sombra">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
+            vehicula convallis urna ac semper. Sed nisl nulla, bibendum a tellus
+            in, condimentum volutpat felis. Proin vel finibus nisi. Vivamus
+            vestibulum blandit urna quis tempus. Integer aliquam eu ante non
+            semper. Vivamus justo mi, rhoncus quis nibh ac, malesuada pulvinar
+            massa. Etiam ornare facilisis ex, at placerat erat. nulla, bibendum
+            a tellus in, condimentum volutpat felis. Proin vel finibus nisi.
+          </p>
+        </div>
       </div>
+      <svg
+        class="svg-baix"
+        viewBox="0 0 1440 521"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M1439 520H-3V1.5C64.8333 90.3134 117.5 410.48 273 432.179C428.5 453.878 479.5 340.488 696.5 343.465C913.5 346.442 1041 436.942 1221 432.179C1365 428.368 1426.33 345.846 1439 305.062V520Z"
+          fill="#24A586"
+          stroke="#24A586"
+        />
+      </svg>
     </section>
 
     <section id="portfolio">
-      <h2><mark>Portfolio</mark></h2>
-      <ul>
-        <li class="tarjeta sombra">
-          <h3><mark>Projecte 1</mark></h3>
-          <h4>Descripcio del projecte 1</h4>
-          <p>
-            Text d'explicació del projecte 1 amb totes les caracteristiques i
-            etc etc.
-          </p>
-          <img
-            src="https://git.az/source/services/2/photo/original/web.jpg"
-            alt="imatge de projecte 1"
-            width="250px"
-          />
-        </li>
-        <li class="tarjeta sombra">
-          <h3><mark>Projecte 2</mark></h3>
-          <h4>Descripcio del projecte 2</h4>
-          <p>
-            Text d'explicació del projecte 2 amb totes les caracteristiques i
-            etc etc.
-          </p>
-          <img
-            src="https://git.az/source/services/2/photo/original/web.jpg"
-            alt="imatge de projecte 1"
-            width="250px"
-          />
-        </li>
-        <li class="tarjeta sombra">
-          <h3><mark>Projecte 3</mark></h3>
-          <h4>Descripcio del projecte 3</h4>
-          <p>
-            Text d'explicació del projecte 3 amb totes les caracteristiques i
-            etc etc.
-          </p>
-          <img
-            src="https://git.az/source/services/2/photo/original/web.jpg"
-            alt="imatge de projecte 1"
-            width="250px"
-          />
-        </li>
-        <li class="tarjeta sombra">
-          <h3><mark>Projecte 4</mark></h3>
-          <h4>Descripcio del projecte 4</h4>
-          <p>
-            Text d'explicació del projecte 3 amb totes les caracteristiques i
-            etc etc.
-          </p>
-          <img
-            src="https://git.az/source/services/2/photo/original/web.jpg"
-            alt="imatge de projecte 1"
-            width="250px"
-          />
-        </li>
-      </ul>
+      <svg
+        class="svg-dalt"
+        viewBox="0 0 1440 811"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M1442 0H0V810C67.8333 630.601 230.915 298.436 319 273.608C492.5 224.704 482.5 362.606 699.5 356.592C916.5 350.579 965.901 6.49329 1100 118.571C1285.5 273.608 1412.5 29.2939 1442 0Z"
+          fill="#24A586"
+          stroke="#24A586"
+        />
+      </svg>
+      <div class="section-wrapper">
+        <h2><mark>Portfolio</mark></h2>
+        <ul>
+          <li class="tarjeta sombra">
+            <h3><mark>Projecte 1</mark></h3>
+            <h4>Descripcio del projecte 1</h4>
+            <p>
+              Text d'explicació del projecte 1 amb totes les caracteristiques i
+              etc etc.
+            </p>
+            <img
+              src="https://git.az/source/services/2/photo/original/web.jpg"
+              alt="imatge de projecte 1"
+              width="250px"
+            />
+          </li>
+          <li class="tarjeta sombra">
+            <h3><mark>Projecte 2</mark></h3>
+            <h4>Descripcio del projecte 2</h4>
+            <p>
+              Text d'explicació del projecte 2 amb totes les caracteristiques i
+              etc etc.
+            </p>
+            <img
+              src="https://git.az/source/services/2/photo/original/web.jpg"
+              alt="imatge de projecte 1"
+              width="250px"
+            />
+          </li>
+          <li class="tarjeta sombra">
+            <h3><mark>Projecte 3</mark></h3>
+            <h4>Descripcio del projecte 3</h4>
+            <p>
+              Text d'explicació del projecte 3 amb totes les caracteristiques i
+              etc etc.
+            </p>
+            <img
+              src="https://git.az/source/services/2/photo/original/web.jpg"
+              alt="imatge de projecte 1"
+              width="250px"
+            />
+          </li>
+          <li class="tarjeta sombra">
+            <h3><mark>Projecte 4</mark></h3>
+            <h4>Descripcio del projecte 4</h4>
+            <p>
+              Text d'explicació del projecte 3 amb totes les caracteristiques i
+              etc etc.
+            </p>
+            <img
+              src="https://git.az/source/services/2/photo/original/web.jpg"
+              alt="imatge de projecte 1"
+              width="250px"
+            />
+          </li>
+        </ul>
+      </div>
+      <svg
+        class="svg-baix"
+        viewBox="0 0 1440 521"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M1439 520H-3V1.5C64.8333 90.3134 117.5 410.48 273 432.179C428.5 453.878 479.5 340.488 696.5 343.465C913.5 346.442 1041 436.942 1221 432.179C1365 428.368 1426.33 345.846 1439 305.062V520Z"
+          fill="#24A586"
+          stroke="#24A586"
+        />
+      </svg>
     </section>
     <section id="contact">
-      <h2><mark>Contact me</mark></h2>
-      <div class="content-contact">
-        <div class="contact-form">
-          <h3>Send me a message</h3>
-          <form
-            action="https://formcarry.com/s/o4OXzU8PvVa"
-            method="POST"
-            accept-charset="UTF-8"
-            target="_blank"
-            class="sombra"
-          >
-            <input type="text" name="name" placeholder="Your name" />
-            <input type="email" name="email" placeholder="Your email" />
-            <textarea
-              name="message"
-              rows="6"
-              cols="30"
-              placeholder="Your message"
-              resiz
-            ></textarea>
-            <input class="form-button" type="submit" value="Submit" />
-          </form>
-        </div>
-        <div class="social-media-content">
-          <h3>My social media</h3>
-          <ul class="social-media-list">
-            <a href="http://www.linkedin.com/in/eloicasamayor"
-              ><li class="social sombra">Linkedin</li></a
+      <svg
+        class="svg-dalt"
+        viewBox="0 0 1440 811"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M1442 0H0V810C67.8333 630.601 230.915 298.436 319 273.608C492.5 224.704 482.5 362.606 699.5 356.592C916.5 350.579 965.901 6.49329 1100 118.571C1285.5 273.608 1412.5 29.2939 1442 0Z"
+          fill="#24A586"
+          stroke="#24A586"
+        />
+      </svg>
+      <div class="section-wrapper">
+        <h2><mark>Contact me</mark></h2>
+        <div class="content-contact">
+          <div class="contact-form">
+            <h3>Send me a message</h3>
+            <form
+              action="https://formcarry.com/s/o4OXzU8PvVa"
+              method="POST"
+              accept-charset="UTF-8"
+              target="_blank"
+              class="sombra"
             >
-            <a href="mailto:eloi.casamayor@gmail.com"
-              ><li class="social sombra">Email</li></a
-            >
-            <a href="http://www.twitter.com/eloicasamayor"
-              ><li class="social sombra">twitter</li></a
-            >
-            <a href="http://www.github.com/eloicasamayor"
-              ><li class="social sombra">Github</li></a
-            >
-          </ul>
+              <input type="text" name="name" placeholder="Your name" />
+              <input type="email" name="email" placeholder="Your email" />
+              <textarea
+                name="message"
+                rows="6"
+                cols="20"
+                placeholder="Your message"
+                resiz
+              ></textarea>
+              <input class="form-button" type="submit" value="Submit" />
+            </form>
+          </div>
+          <div class="social-media-content">
+            <h3>My social media</h3>
+            <ul class="social-media-list">
+              <a href="http://www.linkedin.com/in/eloicasamayor">
+                <li class="social sombra tarjeta">
+                  github<i class="fab fa-github"></i
+                  ><span class="detall-compte-social">eloicasamayor</span>
+                </li></a
+              >
+              <a href="mailto:eloi.casamayor@gmail.com"
+                ><li class="social sombra tarjeta">
+                  email <i class="fas fa-envelope"></i
+                  ><span class="detall-compte-social"
+                    >eloi.casamayor@gmail.com</span
+                  >
+                </li></a
+              >
+              <a href="http://www.twitter.com/eloicasamayor"
+                ><li class="social sombra tarjeta">
+                  twitter <i class="fab fa-twitter"></i
+                  ><span class="detall-compte-social">@eloicasamayor</span>
+                </li></a
+              >
+              <a href="http://www.github.com/eloicasamayor"
+                ><li class="social sombra tarjeta">
+                  linkedin <i class="fab fa-linkedin"></i
+                  ><span class="detall-compte-social">eloicasamayor</span>
+                </li></a
+              >
+            </ul>
+          </div>
         </div>
       </div>
+      <svg
+        class="svg-baix"
+        viewBox="0 0 1440 521"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M1439 520H-3V1.5C64.8333 90.3134 117.5 410.48 273 432.179C428.5 453.878 479.5 340.488 696.5 343.465C913.5 346.442 1041 436.942 1221 432.179C1365 428.368 1426.33 345.846 1439 305.062V520Z"
+          fill="#24A586"
+          stroke="#24A586"
+        />
+      </svg>
     </section>
 
-    <footer>Aquest és el footer ©copyright Eloi Casamayor 2022</footer>
+    <footer><p>Aquest és el footer ©copyright Eloi Casamayor 2022</p></footer>
     <script>
-      function toggleMenuMobil() {
+      document.getElementById("toggle-menu-mobile").onclick = function () {
         document.querySelector("#menu").classList.toggle("menu-hidden");
+
         if (document.querySelector("#toggle-menu-mobile").innerHTML === "✕") {
           document.querySelector("#toggle-menu-mobile").innerHTML = "☰";
         } else {
           document.querySelector("#toggle-menu-mobile").innerHTML = "✕";
         }
-      }
+      };
     </script>
   </body>
 </html>
